# formula_student_system_architecture

./: README.md
ros2_ws/install/bboxes_ex_msgs/share/bboxes_ex_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/cone_detection_lidar/lib/cone_detection_lidar/: detection_simple  grid_trajectory
ros2_ws/install/cone_detection_lidar/share/cone_detection_lidar/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/csv_to_pointcloud2_converter/lib/csv_to_pointcloud2_converter/: csv_to_pointcloud2_node
ros2_ws/install/csv_to_pointcloud2_converter/share/csv_to_pointcloud2_converter/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/detection/lib/detection/: cone_detection_camera
ros2_ws/install/detection/share/detection/: package.sh
ros2_ws/install/formula_student_bringup/share/formula_student_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/lidar_cluster/lib/lidar_cluster/: dblane_f1s  dblane_spatial  dbscan_grid  dbscan_spatial  (+2 more)
ros2_ws/log/: latest_build
ros2_ws/src/csv_to_pointcloud2_converter/: CMakeLists.txt
ros2_ws/src/csv_to_pointcloud2_converter/src/: csv_to_pointcloud2_node.cpp
ros2_ws/src/pointcloud_publisher/: package.xml  setup.py
(+230 files in other folders)
